--- a/style/main.css
+++ b/style/main.css
@@ -59,6 +59,8 @@ h4:after {
     position: absolute;
     left: 50%;
     margin-top: 5%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform:translateX(-50%);
     transform: translateX(-50%);
     background: #d89b64;
 }
@@ -142,6 +144,8 @@ h4:after {
     position: absolute;
     bottom: 1%;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
     transform: translateX(-50%);
 }
 .arrow a {
@@ -174,6 +178,8 @@ h4:after {
     display: block;
     width: 57px;
     height: 110px;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 .slick-prev {
@@ -282,7 +288,7 @@ h4:after {
 .detail-contain {
     max-width: 770px;
     width: 70%;
-    height: 430px;
+    min-height: 430px;
     margin: 0 auto;
     padding: 40px;
     background: #fff;
@@ -331,6 +337,8 @@ h4:after {
 }
 
 .reach-list li:hover {
+    -webkit-transform: scaleY(1.1);
+    -moz-transform: scaleY(1.1);
     transform: scaleY(1.1);
 }
 .reach-list li:hover .reach-detail {
@@ -412,24 +420,19 @@ h4:after {
 /*______________________________end meal_________________________*/
 
 .menu-list {
-    max-width: 1800px;
+    max-width: 1890px;
     width: 100%;
     margin-top: 120px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-}
-.menu-list {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    margin-top: 120px;
+    justify-content: center;
 }
 .menu-list li {
     max-width: 560px;
     width: 100%;
     margin-bottom: 70px;
-    padding-bottom: 75px;
+    margin-right: 35px;
+    margin-left: 35px;
     text-align: center;
     background: #fff;
     box-shadow: 0 0 183px #e5e6eb;
@@ -441,9 +444,6 @@ h4:after {
 .menu-list li a {
     display: block;
 }
-
-
-
 
 /*____________________________________________________________*/
 /*----------------------------------footer--------------------*/
@@ -470,7 +470,11 @@ h4:after {
     position: absolute;
     top: -20%;
     left: 50%;
+
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
     transform: translateX(-50%);
+
     border-radius: 50%;
     border: 1px solid #e6e6e6;
     background: #fff url(../images/my-logo.png) center no-repeat;
